--- a/debian/control
+++ b/debian/control
@@ -2,11 +2,11 @@ Source: buteo-sync-plugins-contacts
 Section: libs
 Priority: optional
 Maintainer: Renato Araujo Oliveira Filho <renato.filho@canonical.com>
-Build-Depends: buteo-syncfw-qt5-dev,
-               cmake,
+Build-Depends: cmake,
                debhelper (>= 9),
                pkg-config,
                libaccounts-qt5-dev,
+               libbuteosyncfw5-dev,
                libsignon-qt5-dev,
                qt5-default,
                qtbase5-dev,
@@ -17,9 +17,11 @@ Homepage: https://launchpad.net/buteo-sync-plugins-contacts
 
 Package: buteo-sync-plugins-contacts-google
 Architecture: any
-Conflicts: evolution-data-server-online-accounts
+Conflicts: evolution-data-server-online-accounts,
+           sync-monitor (<< 0.2),
 Provides: evolution-data-server-online-accounts
 Depends: ${misc:Depends},
          ${shlibs:Depends},
+         buteo-syncfw,
 Description: Buteo google contact sync plugin
  Buteo sync plugin for google contacts
