--- a/accounts/buteo-google-contacts.service
+++ b/accounts/buteo-google-contacts.service
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<service id="google-contacts">
-  <type>contacts</type>
+<service id="buteo-google-contacts">
+  <type>buteo-contacts</type>
   <name>Google Contacts</name>
   <provider>google</provider>
 </service>
