--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: cmake,
                debhelper (>= 9),
                pkg-config,
                libaccounts-qt5-dev,
-               libbuteosyncfw5-dev,
+               libbuteosyncfw5-dev (>= 0.8.5),
                libsignon-qt5-dev,
                qt5-default,
                qtbase5-dev,
